# ws2infer-js

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
mmds/: overview_architecture.mmd  system.mmd
src/: config.rs  main.rs  network.rs  persistence.rs  room.rs  signaling.rs  stun.rs  turn.rs
static/: index.html  sender.html  viewer.html
tests/: README.md  basic_tests.rs  javascript_client_tests.js  performance_tests.js
