[package]
name = "cam2webrtc"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
webrtc = "0.9"
bytes = "1.0"
async-trait = "0.1"
byteorder = "1.4"
chrono = { version = "0.4", features = ["serde"] }
